<resources>
    <string name="app_name">FitAssistant</string>
    <string name="app_name_today">FitAssistant - TODAY</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dispatch">DispatchActivity</string>
    <string name="login">Login</string>
    <string name="powered_by">G14-UCD</string>
    <string name="signup">Sign Up</string>
    <string name="AndroidProgramming">Android Programming</string>
    <string name="facebook_app_id">1649882351961392</string>


    <!--- String for login and register -->
    <string name="title_activity_login">Enter</string>
    <string name="title_activity_signup">Sign In</string>
    <string name="prompt_email">Email, must be valid</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm password</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_email">type an email</string>
    <string name="error_blank_password">type a password</string>
    <string name="error_mismatched_passwords">put the passwords again</string>
    <string name="error_join">" and "</string>
    <string name="error_end">.</string>
    <string name="invalid_login_credentials">Incorrect email or password</string>
    <string name="error_size_password">the password has to be at least 6 characters</string>
    <string name="progress_login">Connecting</string>
    <string name="progress_signup">Signing In</string>
    <string name="logout">Log Out</string>
    <string name="signup_verification">You need to verify your account, you will receive a verification email soon. Thank You!</string>
    <string name="email_not_verified">User not verified</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_username">First name</string>
    <string name="date_of_birth">Date of Birth</string>

    <!--- String for Diets -->
    <string name="diet">Diet</string>
    <string name="title_activity_diet">Diet</string>
    <string name="add_diet">+ Diet</string>
    <string name="add_diet_event">+Event</string>
    <string name="view_diet">view</string>
    <string name="no_diet_message">You don\'t have diet. Please create one.</string>
    <string name="title_activity_new_diet">New Diet</string>
    <string name="new_option">+ option</string>
    <string name="save_diet">Save</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="progress_saving_exercise">Saving Exercise</string>
    <string name="progress_saving_diet">Saving Diet</string>
    <string name="progress_saving_event">Saving Event</string>
    <string name="option">Option</string>
    <string name="today">TODAY</string>
    <string-array name="weeday_spinner">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <string name="add_diet_schedule">+ diet schedule</string>

<!-- String to exercises -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise">Exercises</string>
    <string name="no_exercise_message">You don\'t have exercises. Please create one.</string>
    <string name="add_exercise">+ Exercise</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_exercise">NewExerciseActivity</string>
    <string name="gym">Gym</string>
    <string name="general_activity">General activities</string>

<!-- String to drawer -->
    <string-array
        name="drawer_string_array">
        <item>Diet</item>
        <item>Exercises</item>
        <item>Schedule Diet</item>
        <item>Schedule Exercise</item>
        <item>Goals</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_new_diet_schedulet">New Diet Event</string>


<!-- String to Goal -->
    <string name="title_activity_goal">Goal</string>
    <string name="no_goal_message">You don\'t have goals. Please create one.</string>
    <string name="add_goal">+ Goal</string>
    <string name="title_activity_new_goal">New Goal</string>
    <string name="title_activity_view_goal">View Goal</string>
    <string name="gym_exercises">Gym Exercises</string>
    <string name="progress_loading_exercises">Loading your exercises</string>
    <string name="progress_loading_goals">Loading your goals</string>
    <string name="progress_loading_diets">Loading your diets</string>
    <string name="progress_saving_goal">Saving goal</string>
    <string name="progress_loading_viewGoal">Loading your goal to view</string>
    <string name="progress_loading">Loading ...</string>
    <string name="sections">Sections</string>
    <string name="repetitions">Repetitions</string>
    <string-array name="goals_array">
        <item>Lose fat</item>
        <item>Gain body mass</item>
        <item>Lose weight</item>
        <item>Follow diet</item>
        <item>Go to gym</item>
    </string-array>
    <string-array name="series_array">
        <item>Sets</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>Free</item>
    </string-array>
    <string-array name="repetition_array">
        <item>Repetitions</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>Free</item>
    </string-array>
    <string name="title_activity_popup">popup</string>
    <string name="end">end</string>
    <string name="start">Starts on</string>
    <string name="go_location">Go</string>

    <string name="title_activity_exercise_schedule">Exercise Events</string>
    <string name="no_exercise_schedule_message">You don\'t have events. Create one.</string>
    <string name="title_activity_diet_schedule">Diet Events</string>
    <string name="go_there">Go there</string>
    <string name="repeat">Repeat</string>
    <string name="add_exercise_event">+Event</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="no_diet_scheduled">You have no diet scheduled for today</string>
    <string name="schedule_a_diet">You do not have any diet scheduled for today</string>
    <string name="schedule_a_exercise">You do not have any exercise scheduled for today</string>
    <string name="no_connection">No internet connection</string>

</resources>
