<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"

    android:background="#80000000">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/exercise"
                android:layout_weight="2"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sections"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/repetitions"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


</LinearLayout>