<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:padding="8dp"
    android:background="@color/md_blue_300">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/child_other_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exercise"
        android:layout_weight="2"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sections"
            android:id="@+id/child_other_location"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <com.gc.materialdesign.views.ButtonFlat
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/go_there"
            android:id="@+id/child_button_go"
            android:layout_weight="2"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
             />

    </LinearLayout>

</LinearLayout>