<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WelcomeActivity" >
    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="128dp"
        android:text="@string/login"
        android:layout_alignRight="@+id/signup_button"
        android:layout_alignEnd="@+id/signup_button"
        android:layout_alignLeft="@+id/signup_button"
        android:layout_alignStart="@+id/signup_button" />
    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:text="@string/signup"
        android:layout_alignRight="@+id/login_facebook_button"
        android:layout_alignEnd="@+id/login_facebook_button"
        android:layout_alignLeft="@+id/welcometextview_2"
        android:layout_alignStart="@+id/welcometextview_2" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/welcometextview_2"
        android:layout_alignEnd="@+id/welcometextview_2" />


    <TextView
        android:id="@+id/welcometextview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="@string/powered_by"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/welcometextview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/welcometextview_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/AndroidProgramming"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>